# prototype

./: README.md
backend/: .gitignore  README.md
backend/artifacts/: checksums.txt  main_contract.wasm
backend/artifacts_external/: checksums.txt  cw20_base.wasm
backend/contracts/main_contract/: Cargo.toml
backend/contracts/main_contract/examples/: schema.rs
backend/contracts/main_contract/schema/: execute_msg.json  instantiate_msg.json  investment_response.json  query_msg.json
backend/contracts/main_contract/src/: bond.rs  contract.rs  error.rs  lib.rs  logo.rs  msg.rs  response.rs  state.rs  testing.rs  token.rs
backend/scripts/: deployContracts.js  index.js  package.json  setup.js
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/components/: addresses.js  addresses2.js  avatar.js  change-arrow.js  creator-token-chart.js  creator.js  discover-chart.js  discover-list.js  discover-native-token.js  footer.js  mint-input.js  mint-select.js  my-token-empty.js  my-token-list.js  navbar.js  stake-pool.js  stake-stake.js  stake-stats.js  token-chart-original.js  token-chart.js  token-details.js  token-header.js  token-leaderboard.js  trade-modal.js
frontend/contexts/: tokensContext.js
frontend/hooks/: useContractTokens.js  useLCDClient.js
frontend/pages/: [tokenId].js  _app.js  index.js  mint.js  stake.js  tokenomics.js
frontend/public/: tinyterra.psd
frontend/styles/: styles.css
frontend/utils/: data.js  misc.js  storage.js
